completed complete flow of authentication
